css/style.css
body {
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
}

#canvas {
  width: 600px;
  height: 400px;
  border: 1px solid #aaa;
  border-radius: 5px;
  position: relative;
  overflow: hidden;
}

.buttons,
#colorPicker,
#sizePicker {
  margin: 10px 0;
}

.colorBtn {
  width: 40px;
  height: 40px;
  border: none;
  cursor: pointer;
  margin: 3px;
  border-radius: 5px;
  border: 1px solid #bbb;
}

.colorBtn.active, .colorBtn:hover {
  border: 1px solid #222;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
}

#cssOutput {
  white-space: pre-wrap;
  background-color: #f0f0f0;
  border: 1px solid #ddd;
  padding: 10px;
}

button#reset {
  margin-left: 30px;
}

footer {
  position: absolute;
  bottom: 0;
}

